--- a/src/pages/AuctionPage/auctionPage.css
+++ b/src/pages/AuctionPage/auctionPage.css
@@ -8,6 +8,10 @@
   .auctionDetails * {
     background: transparent;
   }
+
+  .auctionDetails_image {
+    max-height: 100%;
+  }
   
   .cover {
     width: 100%;
@@ -17,7 +21,7 @@
   }
   
 .auction-items-container {
-    max-height: 70vh; /* Set a fixed height for the container */
+    max-height: 80vh;
     overflow-y: auto; /* Enable vertical scroll when items overflow */
   }
   
