--- a/src/pages/AuctionPage/auctionPage.css
+++ b/src/pages/AuctionPage/auctionPage.css
@@ -1,4 +1,5 @@
 .auctionDetails {
+  max-height: 85vh;
     height: 100%;
     padding: 20px;
     background: url(https://img.freepik.com/free-photo/vivid-blurred-colorful-wallpaper-background_58702-3883.jpg?size=626&ext=jpg&ga=GA1.1.632798143.1705968000&semt=ais);
@@ -9,20 +10,13 @@
     background: transparent;
   }
 
+  .auction-items-container {
+    max-height: 84vh;
+    overflow-y: scroll; /* Enable vertical scroll when items overflow */
+  }
+  
   .auctionDetails_image {
-    max-height: 100%;
-  }
-  
-  .cover {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    background-color: transparent;
-  }
-  
-.auction-items-container {
-    max-height: 85vh;
-    overflow-y: auto; /* Enable vertical scroll when items overflow */
+    max-height: 40vh;
   }
   
   .auctionDetails h3 {
