--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,25 @@
+@font-face {
+  font-family: BurgerKing;
+  src: url(./assets/fonts/Insanibc.ttf);
+}
+
+@font-face {
+  font-family: BebasNeue-Regular;
+  src: url(./assets/fonts/BebasNeue-Regular.ttf);
+}
+
+@font-face {
+  font-family: Futura Extra Black Condensed Italic;
+  src: url(./assets/fonts/Futura\ Extra\ Black\ Condensed\ Italic.otf);
+}
+
 * {
   margin: 0;
   padding: 0;
 }
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: BebasNeue-Regular;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
