--- a/src/pages/AuctionPage/auctionPage.css
+++ b/src/pages/AuctionPage/auctionPage.css
@@ -87,3 +87,44 @@
     font-size: 6vh;
     color: #fff;
   }
+
+  
+.auctionDetails {
+  height: 100%;
+  padding: 20px;
+  background: url(https://img.freepik.com/free-photo/vivid-blurred-colorful-wallpaper-background_58702-3883.jpg?size=626&ext=jpg&ga=GA1.1.632798143.1705968000&semt=ais);
+  background-size: cover;
+  overflow: hidden; /* hide any content that overflows */
+}
+
+.auctionDetails * {
+  background: transparent;
+}
+
+.auctionDetails_image {
+  width: 100%;
+  height: 40vh; /* Set a fixed height or adjust as needed */
+  object-fit: contain; /* Ensure the image covers the container */
+}
+
+.auctionDetails h3 {
+  font-size: 2.5vh;
+}
+
+.auctionDetails .subText {
+  font-size: 1.5vh;
+  color: #ffffff;
+}
+
+.auctionDetails .price {
+  font-size: 2vh;
+  font-weight: bold;
+}
+
+.auctionDetails .bid {
+  color: #ffffff;
+}
+
+.auctionDetails .buy {
+  color: #f8eb01;
+}
