--- a/src/pages/AuctionPage/auctionPage.css
+++ b/src/pages/AuctionPage/auctionPage.css
@@ -134,3 +134,28 @@
   font-weight: 600;
   color: #f8eb01;
 }
+
+/* styles.css */
+
+/* Hide the default scrollbar */
+.auction-items-container {
+  overflow-y: auto; /* Change from overflow: hidden; to overflow-y: auto; */
+}
+
+/* Create a custom scrollbar */
+.auction-items-container::-webkit-scrollbar {
+  width: 12px; /* Adjust the width as needed */
+}
+
+.auction-items-container::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+.auction-items-container::-webkit-scrollbar-thumb {
+  background: #e77c7c;
+  border-radius: 6px; /* Make the scrollbar thumb rounded */
+}
+
+.auction-items-container::-webkit-scrollbar-thumb:hover {
+  background: #e40303;
+}
