--- a/src/index.css
+++ b/src/index.css
@@ -45,3 +45,11 @@ body {
   font-weight: 600;
   color: #f8eb01;
 }
+
+.thinText {
+  font-size: 2.5vh;
+  font-family: BebasNeue-Regular;
+  color: #fff;
+  font-weight: 100;
+  color: #000;
+}
